# StrGraph

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
doc/: reference.md
src/: CMakeLists.txt  node.cpp  pyStrGraph.cpp
src/include/: CMakeLists.txt  DAG.h  node.h  node_listener.h  operators.h  utils.h
tests/: CMakeLists.txt  CMakeLists2.txt  showcase.ipynb  showcase.py  test_DAG.cpp  test_OrderBook.cpp  test_first.cpp  test_node.cpp  test_pybind11.cpp  test_pybind11.py
